LayerHost: default hosts renders in a fixed position high z-index container. (#605)
* - Changing default LayerHost to render on a fixed position high zindex surface.
- Fixing a bug in the logic of determining if focus moves should cause Callout to dismiss (it shouldn't if the focused element is the callout target.)
- Removing max height from Dropdown ul/li.

* Adding changefile.

* Casing typo.

--- a/packages/office-ui-fabric-react/src/components/Dropdown/Dropdown.scss
+++ b/packages/office-ui-fabric-react/src/components/Dropdown/Dropdown.scss
@@ -158,7 +158,6 @@ $DropDown-item-height: 36px;
   background-color: $ms-color-white;
   list-style-type: none;
   width: 100%;
-  max-height: 200px;
   overflow-y: scroll;
   top: auto;
   right: auto;
